Rename the library to canvas-game-engine

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "canvasGameEngine",
+  "name": "canvas-game-engine",
   "version": "1.0.0",
   "description": "",
   "main": "GameObject.js",
