--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "canvas-game-engine",
   "version": "1.0.0",
-  "description": "",
-  "main": "GameObject.js",
+  "description": "An HTML/Javascript game engine",
+  "main": "canvas-game-engine.js",
+  "repository": "https://github.com/pkmnfrk/canvas-game-engine.git",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
